# r-cuse2net

./: Cargo.toml  README.md
.cargo/: config
contrib/: cuse2net-cuse@.service  ser2net-cuse@.service
examples/: simple.rs
mod-cuse/: Cargo.toml
mod-cuse/src/: error.rs  ffi.rs  io.rs  lib.rs  util.rs
mod-ioctl/: Cargo.toml
mod-ioctl/src/: bad.rs  error.rs  ffi.rs  ffi_serial.rs  lib.rs
src/: cuse2net-cuse.rs  cuse2net-dev.rs  error.rs  lib.rs  ser2net-cuse.rs  ser2net-dev.rs
src/proto/: asrepr.rs  endian.rs  errors.rs  io.rs  ioctl.rs  ioctl_serial.rs  mod.rs  op.rs  rawbuffer.rs  request.rs  request_flags.rs  response.rs
src/realdev/: mod.rs  poll.rs  read.rs
src/virtdev/: device.rs  device_open.rs  ioctl.rs  mod.rs  registry.rs  registry_element.rs
