[package]
name = "r-ser2net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ser2net-cuse"
path = "src/ser2net-cuse.rs"

[[bin]]
name = "ser2net-dev"
path = "src/ser2net-dev.rs"

[workspace]
members = [
	"mod-cuse"
]

[dependencies]
thiserror = "*"
ensc-cuse-ffi = { version = "*", path = "mod-cuse" }
tracing = { version = "*", features = ["max_level_trace", "release_max_level_info"] }
tracing-subscriber = { version = "*", features = ["json", "env-filter"] }
nix = "*"
clap = { version = "*", features = ["derive", "color", "std", "wrap_help"] }
parking_lot = "*"
