[package]
name = "r-cuse2net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cuse2net-cuse"
path = "src/cuse2net-cuse.rs"

[[bin]]
name = "cuse2net-dev"
path = "src/cuse2net-dev.rs"

[workspace]
members = [
	"mod-cuse",
	"mod-ioctl",
]

[dependencies]
thiserror = "*"
ensc-cuse-ffi = { version = "*", path = "mod-cuse" }
ensc-ioctl-ffi = { version = "*", path = "mod-ioctl" }
tracing = { version = "*", features = ["max_level_trace", "release_max_level_info"] }
tracing-subscriber = { version = "*", features = ["json", "env-filter"] }
nix = "*"
clap = { version = "*", features = ["derive", "color", "std", "wrap_help"] }
parking_lot = { version = "*", features = ["deadlock_detection"] }
